--- a/app/src/main/res/layout/activity_all_source_search.xml
+++ b/app/src/main/res/layout/activity_all_source_search.xml
@@ -356,6 +356,7 @@
                     android:orientation="horizontal">
 
                     <EditText
+                        android:id="@+id/et_min_money"
                         android:layout_width="80dp"
                         android:layout_height="30dp"
                         android:background="@drawable/bg_radiobutton_selector"
@@ -373,6 +374,7 @@
                         android:textSize="12sp" />
 
                     <EditText
+                        android:id="@+id/et_max_money"
                         android:layout_width="80dp"
                         android:layout_height="30dp"
                         android:background="@drawable/bg_radiobutton_selector"
@@ -502,14 +504,14 @@
                     android:text="车源类型"
                     android:textColor="@color/color_333333"
                     android:textSize="14sp"
-                    android:visibility="gone"/>
+                    android:visibility="gone" />
 
                 <com.zhy.view.flowlayout.TagFlowLayout
                     android:id="@+id/tag_flow_car_source_type"
                     android:layout_width="match_parent"
                     android:layout_height="320dp"
-                    app:max_select="1"
-                    android:visibility="gone"/>
+                    android:visibility="gone"
+                    app:max_select="1" />
 
             </LinearLayout>
 
@@ -534,7 +536,8 @@
                 android:layout_width="131dp"
                 android:layout_height="40dp"
                 android:background="@mipmap/home_bg"
-                android:text="确定" />
+                android:text="确定"
+                android:textColor="#FFFFFF" />
         </LinearLayout>
     </LinearLayout>
 </android.support.v4.widget.DrawerLayout>
