--- a/app/src/main/res/layout/fragment_layout_store_manager_item_click.xml
+++ b/app/src/main/res/layout/fragment_layout_store_manager_item_click.xml
@@ -58,6 +58,26 @@
             android:text="筛选"
             android:textColor="@drawable/text_color_radio_selector" />
 
+        <View
+            android:id="@+id/share_line"
+            android:layout_width="1dp"
+            android:layout_height="match_parent"
+            android:layout_marginBottom="10dp"
+            android:layout_marginTop="10dp"
+            android:background="#E6E6E6"
+            android:visibility="gone" />
+
+        <com.cheeshou.cheeshou.view.DrawableCenterRadioButton
+            android:id="@+id/rb_car_share"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="103"
+            android:button="@null"
+            android:gravity="center"
+            android:text="筛选"
+            android:textColor="@drawable/text_color_radio_selector"
+            android:visibility="gone" />
+
         <Button
             android:id="@+id/btn_car_share"
             android:layout_width="76dp"
