--- a/app/src/main/res/layout/item_customer_detail_want_car.xml
+++ b/app/src/main/res/layout/item_customer_detail_want_car.xml
@@ -27,7 +27,7 @@
         android:id="@+id/tv_message"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="车源商名称 | 地区 | 全省"
+        android:text=""
         android:textColor="#999999"
         android:textSize="12sp"
         app:layout_constraintLeft_toLeftOf="@+id/tv_title"
@@ -57,16 +57,6 @@
         app:layout_constraintLeft_toLeftOf="@+id/tv_message"
         app:layout_constraintTop_toBottomOf="@+id/tv_message" />
 
-    <TextView
-        android:id="@+id/tv_deduct"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp"
-        android:text="销售提成2000元"
-        android:textColor="#333333"
-        android:textSize="12sp"
-        app:layout_constraintBottom_toBottomOf="@+id/tv_price"
-        app:layout_constraintLeft_toRightOf="@+id/tv_price" />
 
     <TextView
         android:id="@+id/tv_time"
@@ -75,7 +65,7 @@
         android:text="今天"
         android:textColor="#999999"
         android:textSize="12sp"
-        app:layout_constraintBottom_toBottomOf="@+id/tv_deduct"
+        app:layout_constraintBottom_toBottomOf="@+id/tv_price"
         app:layout_constraintRight_toRightOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
