--- a/app/src/main/res/layout/activity_nation_source.xml
+++ b/app/src/main/res/layout/activity_nation_source.xml
@@ -247,7 +247,6 @@
                 </RelativeLayout>
 
 
-
                 <View
                     android:layout_width="match_parent"
                     android:layout_height="1dp"
@@ -605,14 +604,14 @@
                     android:text="车源类型"
                     android:textColor="@color/color_333333"
                     android:textSize="14sp"
-                    android:visibility="gone"/>
+                    android:visibility="gone" />
 
                 <com.zhy.view.flowlayout.TagFlowLayout
                     android:id="@+id/tag_flow_car_source_type"
                     android:layout_width="match_parent"
                     android:layout_height="320dp"
-                    app:max_select="1"
-                    android:visibility="gone"/>
+                    android:visibility="gone"
+                    app:max_select="1" />
 
             </LinearLayout>
 
@@ -637,7 +636,8 @@
                 android:layout_width="131dp"
                 android:layout_height="40dp"
                 android:background="@mipmap/home_bg"
-                android:text="确定" />
+                android:text="确定"
+                android:textColor="#FFFFFF" />
         </LinearLayout>
     </LinearLayout>
 </android.support.v4.widget.DrawerLayout>
