--- a/app/src/main/res/layout/activity_nation_source.xml
+++ b/app/src/main/res/layout/activity_nation_source.xml
@@ -214,6 +214,7 @@
                     android:background="#F5F5F5" />
 
                 <RelativeLayout
+                    android:id="@+id/rl_sales_area"
                     android:layout_width="match_parent"
                     android:layout_height="40dp"
                     android:layout_marginRight="14dp">
@@ -254,6 +255,7 @@
                     android:background="#F5F5F5" />
 
                 <RelativeLayout
+                    android:id="@+id/rl_options_type"
                     android:layout_width="match_parent"
                     android:layout_height="40dp"
                     android:layout_marginRight="14dp">
@@ -293,6 +295,7 @@
                     android:background="#F5F5F5" />
 
                 <RelativeLayout
+                    android:id="@+id/rl_car_brand"
                     android:layout_width="match_parent"
                     android:layout_height="40dp"
                     android:layout_marginRight="14dp">
@@ -333,6 +336,7 @@
 
 
                 <RelativeLayout
+                    android:id="@+id/rl_car_model"
                     android:layout_width="match_parent"
                     android:layout_height="40dp"
                     android:layout_marginRight="14dp">
