--- a/app/src/main/res/layout/activity_store_manager_item_click.xml
+++ b/app/src/main/res/layout/activity_store_manager_item_click.xml
@@ -108,6 +108,7 @@
                     android:background="#F5F5F5" />
 
                 <RelativeLayout
+                    android:id="@+id/rl_sales_area"
                     android:layout_width="match_parent"
                     android:layout_height="40dp"
                     android:layout_marginRight="14dp">
@@ -147,6 +148,7 @@
                     android:background="#F5F5F5" />
 
                 <RelativeLayout
+                    android:id="@+id/rl_options_type"
                     android:layout_width="match_parent"
                     android:layout_height="40dp"
                     android:layout_marginRight="14dp">
@@ -186,6 +188,7 @@
                     android:background="#F5F5F5" />
 
                 <RelativeLayout
+                    android:id="@+id/rl_car_brand"
                     android:layout_width="match_parent"
                     android:layout_height="40dp"
                     android:layout_marginRight="14dp">
@@ -225,6 +228,7 @@
                     android:background="#F5F5F5" />
 
                 <RelativeLayout
+                    android:id="@+id/rl_car_model"
                     android:layout_width="match_parent"
                     android:layout_height="40dp"
                     android:layout_marginRight="14dp">
