--- a/app/src/main/res/layout/activity_car_detail.xml
+++ b/app/src/main/res/layout/activity_car_detail.xml
@@ -50,7 +50,7 @@
 
             <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="220dp">
+                android:layout_height="240dp">
 
                 <com.cheeshou.cheeshou.view.banner.BannerView
                     android:id="@+id/banner_view"
@@ -110,6 +110,7 @@
                 android:orientation="horizontal">
 
                 <TextView
+                    android:id="@+id/tv_price_name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="14dp"
@@ -500,7 +501,7 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="40dp"
+                android:layout_height="60dp"
                 android:orientation="horizontal">
 
                 <TextView
@@ -512,13 +513,20 @@
                     android:textColor="#999999"
                     android:textSize="13dp" />
 
+                <HorizontalScrollView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    >
+
                 <LinearLayout
                     android:id="@+id/lly_discounts"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_gravity="center"
+                    android:gravity="center"
                     android:layout_marginLeft="14dp"
                     android:orientation="horizontal"></LinearLayout>
+
+                </HorizontalScrollView>
 
             </LinearLayout>
 
