--- a/app/src/main/res/layout/activity_choose_area.xml
+++ b/app/src/main/res/layout/activity_choose_area.xml
@@ -50,6 +50,7 @@
         </RelativeLayout>
 
         <RelativeLayout
+            android:id="@+id/rl_location"
             android:layout_width="match_parent"
             android:layout_height="50dp">
 
@@ -68,7 +69,7 @@
                 android:layout_centerVertical="true"
                 android:layout_marginLeft="16dp"
                 android:layout_toRightOf="@+id/iv_location"
-                android:text="青岛"
+                android:text="青岛市"
                 android:textSize="14sp" />
 
         </RelativeLayout>
