--- a/app/src/main/res/layout/item_search_result.xml
+++ b/app/src/main/res/layout/item_search_result.xml
@@ -12,7 +12,8 @@
         android:layout_height="72dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:scaleType="fitXY"/>
+        android:scaleType="fitXY"
+        android:visibility="gone"/>
 
     <TextView
         android:id="@+id/tv_car_title"
@@ -30,7 +31,7 @@
 
     <TextView
         android:id="@+id/tv_car_sub_title"
-        android:layout_width="180dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="6dp"
         android:includeFontPadding="false"
@@ -57,7 +58,7 @@
 
     <TextView
         android:id="@+id/tv_car_deduct"
-        android:layout_width="60dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="10dp"
         android:includeFontPadding="false"
