--- a/app/src/main/res/layout/ac_login.xml
+++ b/app/src/main/res/layout/ac_login.xml
@@ -43,7 +43,7 @@
         android:background="@drawable/shape_round_react"
         android:orientation="vertical"
         app:layout_constraintTop_toTopOf="parent">
-        
+
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="50dp"
@@ -58,17 +58,17 @@
                 android:layout_height="28dp"
                 android:layout_centerVertical="true"
                 android:layout_marginLeft="10dp"
-                android:src="@mipmap/account"/>
-            
+                android:src="@mipmap/account" />
+
             <EditText
                 android:id="@+id/et_userName"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_toRightOf="@+id/iv_user_name"
-                android:hint="账号"
-                android:background="@null"
                 android:layout_centerVertical="true"
-                android:layout_marginLeft="10dp"/>
+                android:layout_marginLeft="10dp"
+                android:layout_toRightOf="@+id/iv_user_name"
+                android:background="@null"
+                android:hint="账号" />
 
         </RelativeLayout>
 
@@ -86,17 +86,18 @@
                 android:layout_height="28dp"
                 android:layout_centerVertical="true"
                 android:layout_marginLeft="10dp"
-                android:src="@mipmap/password"/>
+                android:src="@mipmap/password" />
 
             <EditText
                 android:id="@+id/et_password"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_toRightOf="@+id/iv_user_password"
-                android:hint="密码"
-                android:background="@null"
                 android:layout_centerVertical="true"
-                android:layout_marginLeft="10dp"/>
+                android:layout_marginLeft="10dp"
+                android:layout_toRightOf="@+id/iv_user_password"
+                android:background="@null"
+                android:hint="密码"
+                android:inputType="textPassword" />
 
         </RelativeLayout>
 
@@ -104,12 +105,12 @@
             android:id="@+id/btn_login"
             android:layout_width="match_parent"
             android:layout_height="40dp"
-            android:text="登陆"
-            android:layout_marginTop="20dp"
             android:layout_marginLeft="30dp"
             android:layout_marginRight="30dp"
+            android:layout_marginTop="20dp"
             android:background="@mipmap/home_bg"
-            android:textColor="#FFFFFF"/>
+            android:text="登陆"
+            android:textColor="#FFFFFF" />
 
     </LinearLayout>
 
