--- a/app/src/main/res/layout/activity_car_detail.xml
+++ b/app/src/main/res/layout/activity_car_detail.xml
@@ -678,7 +678,7 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="40dp"
+                android:layout_height="60dp"
                 android:orientation="horizontal">
 
                 <TextView
@@ -697,6 +697,8 @@
                     android:layout_gravity="center"
                     android:layout_marginLeft="14dp"
                     android:text="P01全景"
+                    android:maxLines="3"
+                    android:ellipsize="end"
                     android:textColor="#333333"
                     android:textSize="13dp" />
 
