--- a/app/src/main/res/layout/activity_put_away_detail.xml
+++ b/app/src/main/res/layout/activity_put_away_detail.xml
@@ -15,6 +15,7 @@
         android:paddingRight="14dp">
 
         <ImageView
+            android:id="@+id/iv_back"
             android:layout_width="18dp"
             android:layout_height="18dp"
             android:layout_centerVertical="true"
