--- a/app/src/main/res/layout/ac_login.xml
+++ b/app/src/main/res/layout/ac_login.xml
@@ -109,7 +109,7 @@
             android:layout_marginRight="30dp"
             android:layout_marginTop="20dp"
             android:background="@mipmap/home_bg"
-            android:text="登陆"
+            android:text="登录"
             android:textColor="#FFFFFF" />
 
     </LinearLayout>
