--- a/app/src/main/res/layout/fragment_market_traders.xml
+++ b/app/src/main/res/layout/fragment_market_traders.xml
@@ -202,10 +202,26 @@
             android:orientation="horizontal">
 
             <RelativeLayout
+                android:id="@+id/rl_order_manager"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1">
 
+                <ImageView
+                    android:id="@+id/iv_order"
+                    android:layout_width="60dp"
+                    android:layout_height="60dp"
+                    android:layout_centerInParent="true"
+                    android:src="@mipmap/home_orders" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/iv_order"
+                    android:layout_centerHorizontal="true"
+                    android:layout_marginTop="12dp"
+                    android:text="订单管理"
+                    android:textSize="14dp" />
 
             </RelativeLayout>
 
