--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -21,4 +21,12 @@
     <color name="color5">#57C5E8</color>
     <color name="background">#FFFFFF</color>
 
+    <color name="white">#ffffff</color>
+    <color name="common_text_gray">#999999</color>
+    <color name="common_top_bg">#AE9459</color>
+    <color name="common_tab_btn">#C6AD64</color>
+    <color name="common_char_line">#e5d7b0</color>
+    <color name="common_line_chartview_scal">#bababa</color>
+    <color name="common_point_line">#ECECEC</color>
+
 </resources>
