--- a/app/src/main/res/layout/activity_customer_follow.xml
+++ b/app/src/main/res/layout/activity_customer_follow.xml
@@ -195,8 +195,8 @@
                 android:layout_height="50dp"
                 android:gravity="center_vertical"
                 android:paddingLeft="14dp"
-                android:visibility="gone"
-                android:paddingRight="14dp">
+                android:paddingRight="14dp"
+                android:visibility="gone">
 
                 <TextView
                     android:layout_width="0dp"
@@ -218,8 +218,8 @@
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/recycler_follow_car"
                 android:layout_width="match_parent"
-                android:visibility="gone"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content"
+                android:visibility="gone" />
 
             <LinearLayout
                 android:layout_width="match_parent"
