--- a/app/src/main/res/layout/activity_modify_car.xml
+++ b/app/src/main/res/layout/activity_modify_car.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
 
@@ -30,52 +30,53 @@
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:background="#F5F5F5"
         android:layout_marginLeft="14dp"
-        android:layout_marginRight="14dp"/>
+        android:layout_marginRight="14dp"
+        android:background="#F5F5F5" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="120dp"
-        android:orientation="horizontal"
-        >
-        
+        android:orientation="horizontal">
+
         <ImageView
             android:id="@+id/iv_car_img"
             android:layout_width="88dp"
             android:layout_height="66dp"
-            android:layout_margin="14dp"
-            android:layout_gravity="center"/>
+            android:layout_gravity="center"
+            android:layout_margin="14dp" />
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:orientation="vertical">
+
             <TextView
                 android:id="@+id/tv_car_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="雪佛兰2013款 科鲁兹 1.6LSL天地板"
                 android:layout_marginTop="14dp"
+                android:text="雪佛兰2013款 科鲁兹 1.6LSL天地板"
                 android:textColor="#333333"
-                android:textSize="14sp"/>
+                android:textSize="14sp" />
+
             <TextView
                 android:id="@id/tv_car_price"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="车源价  16.8万"
                 android:layout_marginTop="12dp"
+                android:text="车源价  16.8万"
                 android:textColor="#999999"
-                android:textSize="14sp"/>
+                android:textSize="14sp" />
 
             <TextView
                 android:id="@+id/tv_suggest_price"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="建议售价  20万"
                 android:layout_marginTop="8dp"
+                android:text="建议售价  20万"
                 android:textColor="#FF5754"
-                android:textSize="14sp"/>
+                android:textSize="14sp" />
         </LinearLayout>
 
     </LinearLayout>
@@ -84,114 +85,156 @@
         android:layout_width="match_parent"
         android:layout_height="10dp"
         android:background="#F5F5F5" />
-    
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="60dp"
-        android:background="#FFFFFF"
         android:layout_marginLeft="14dp"
-        android:layout_marginRight="14dp">
+        android:layout_marginRight="14dp"
+        android:background="#FFFFFF">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
+            android:layout_marginLeft="14dp"
             android:text="销售底价"
-            android:textSize="14sp"
             android:textColor="#333333"
-            android:layout_marginLeft="14dp"
-            />
-        
-        <EditText
-            android:id="@+id/et_saleCarPrice"
-            android:layout_width="86dp"
-            android:layout_height="30dp"
-            android:layout_centerVertical="true"
+            android:textSize="14sp" />
+
+        <LinearLayout
+            android:layout_width="80dp"
+            android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
-            android:background="@drawable/bg_edittext"
-            android:hint="万"
-            android:gravity="center|right"
+            android:layout_centerVertical="true"
             android:layout_marginRight="14dp"
-            android:textSize="12sp"
-            android:paddingRight="20dp"/>
+            android:background="@drawable/bg_edittext"
+            android:orientation="horizontal">
+
+            <EditText
+                android:id="@+id/et_saleCarPrice"
+                android:layout_width="56dp"
+                android:layout_height="30dp"
+                android:background="@null"
+                android:gravity="center|right"
+                android:paddingRight="10dp"
+                android:textSize="12sp" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingRight="10dp"
+                android:text="万"
+                android:textSize="12sp" />
+
+        </LinearLayout>
     </RelativeLayout>
 
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:background="#F5F5F5"
         android:layout_marginLeft="14dp"
-        android:layout_marginRight="14dp"/>
+        android:layout_marginRight="14dp"
+        android:background="#F5F5F5" />
 
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="60dp"
-        android:background="#FFFFFF"
         android:layout_marginLeft="14dp"
-        android:layout_marginRight="14dp">
+        android:layout_marginRight="14dp"
+        android:background="#FFFFFF">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
+            android:layout_marginLeft="14dp"
             android:text="保险返点"
-            android:textSize="14sp"
             android:textColor="#333333"
-            android:layout_marginLeft="14dp"
-            />
+            android:textSize="14sp" />
 
-        <EditText
-            android:id="@+id/et_insuranceRebates"
-            android:layout_width="86dp"
-            android:layout_height="30dp"
-            android:layout_centerVertical="true"
+        <LinearLayout
+            android:layout_width="80dp"
+            android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
-            android:background="@drawable/bg_edittext"
-            android:hint="%"
-            android:gravity="center|right"
-            android:textSize="12sp"
+            android:layout_centerVertical="true"
             android:layout_marginRight="14dp"
-            android:paddingRight="20dp"/>
+            android:background="@drawable/bg_edittext"
+            android:orientation="horizontal">
+
+            <EditText
+                android:id="@+id/et_insuranceRebates"
+                android:layout_width="56dp"
+                android:layout_height="30dp"
+                android:background="@null"
+                android:gravity="center|right"
+                android:paddingRight="10dp"
+                android:textSize="12sp" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingRight="10dp"
+                android:text="%"
+                android:textSize="12sp" />
+
+
+        </LinearLayout>
     </RelativeLayout>
 
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:background="#F5F5F5"
         android:layout_marginLeft="14dp"
-        android:layout_marginRight="14dp"/>
+        android:layout_marginRight="14dp"
+        android:background="#F5F5F5" />
 
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="60dp"
-        android:background="#FFFFFF"
         android:layout_marginLeft="14dp"
-        android:layout_marginRight="14dp">
+        android:layout_marginRight="14dp"
+        android:background="#FFFFFF">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
-            android:text="贷款返点"
-            android:textSize="14sp"
-            android:textColor="#333333"
             android:layout_marginLeft="14dp"
-            />
+            android:text="贷款返点"
+            android:textColor="#333333"
+            android:textSize="14sp" />
 
-        <EditText
-            android:id="@+id/et_loanRebates"
-            android:layout_width="86dp"
-            android:layout_height="30dp"
-            android:layout_centerVertical="true"
+        <LinearLayout
+            android:layout_width="80dp"
+            android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
-            android:background="@drawable/bg_edittext"
+            android:layout_centerVertical="true"
             android:layout_marginRight="14dp"
-            android:hint="%"
-            android:gravity="center|right"
-            android:textSize="12sp"
-            android:paddingRight="20dp"/>
+            android:background="@drawable/bg_edittext"
+            android:orientation="horizontal">
+
+            <EditText
+                android:id="@+id/et_loanRebates"
+                android:layout_width="56dp"
+                android:layout_height="30dp"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:background="@null"
+                android:gravity="center|right"
+                android:paddingRight="10dp"
+                android:textSize="12sp" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingRight="10dp"
+                android:text="%"
+                android:textSize="12sp" />
+
+        </LinearLayout>
     </RelativeLayout>
 
 
@@ -199,9 +242,9 @@
         android:id="@+id/btn_confirm"
         android:layout_width="match_parent"
         android:layout_height="40dp"
-        android:text="确定"
         android:layout_margin="20dp"
         android:background="@mipmap/home_bg"
-        android:textColor="#FFFFFF"/>
+        android:text="确定"
+        android:textColor="#FFFFFF" />
 
 </LinearLayout>
