--- a/app/src/main/res/layout/fragment_market_traders.xml
+++ b/app/src/main/res/layout/fragment_market_traders.xml
@@ -48,19 +48,24 @@
         android:textSize="14dp"
         app:layout_constraintTop_toBottomOf="@+id/subhead_title" />
 
-    <LinearLayout
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="438dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
+        android:layout_height="0dp"
         android:layout_marginTop="150dp"
-        android:background="@drawable/shape_round_react"
-        android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="0dp"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            android:background="@drawable/shape_round_react"
+            android:orientation="vertical">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="120dp"
             android:layout_weight="1"
             android:orientation="horizontal">
 
@@ -129,7 +134,7 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="0dp"
+            android:layout_height="120dp"
             android:layout_weight="1"
             android:orientation="horizontal">
 
@@ -197,7 +202,7 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="0dp"
+            android:layout_height="120dp"
             android:layout_weight="1"
             android:orientation="horizontal">
 
@@ -241,6 +246,7 @@
 
         </LinearLayout>
     </LinearLayout>
+    </ScrollView>
 
 
 </android.support.constraint.ConstraintLayout>
