--- a/app/src/main/res/layout/item_order_list.xml
+++ b/app/src/main/res/layout/item_order_list.xml
@@ -13,7 +13,8 @@
         android:src="@mipmap/ic_launcher"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:scaleType="fitXY"/>
+        android:scaleType="fitXY"
+        android:visibility="gone"/>
 
     <TextView
         android:id="@+id/tv_car_title"
@@ -48,8 +49,8 @@
         android:textColor="#FE5F55"
         android:textSize="16sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="@id/img_car_poster"
-        app:layout_constraintLeft_toLeftOf="@id/tv_car_title" />
+        app:layout_constraintLeft_toLeftOf="@id/tv_order_sub_title"
+        app:layout_constraintTop_toBottomOf="@id/tv_order_sub_title" />
 
     <TextView
         android:id="@+id/tv_order_date"
@@ -58,7 +59,7 @@
         android:text="2018/06/24"
         android:textColor="#999999"
         android:textSize="11sp"
-        app:layout_constraintBottom_toBottomOf="@+id/img_car_poster"
+        app:layout_constraintBottom_toBottomOf="@+id/tv_order_price"
         app:layout_constraintRight_toRightOf="parent" />
 
 
